pmap: extract classes